- Add the Zotero icon to the add-on bar instead of the status bar in Fx4 - Make the add-on bar visible if the Zotero icon isn't set to hidden, which is an annoying way of dealing with https://bugzilla.mozilla.org/show_bug.cgi?id=616419 not yet landing -- people who use an upper toolbar button and don't want the add-on bar to show will need to set the Zotero icon to hidden
Addresses #1726, Firefox 4 Compatibility

--- a/chrome/skin/default/zotero/overlay.css
+++ b/chrome/skin/default/zotero/overlay.css
@@ -1,18 +1,25 @@
-#zotero-status-bar-icon
+#zotero-status-bar-icon, #zotero-addon-bar-icon
 {
 	width: 55px;
-	margin: 0 0 -1px; /* For Fitts's law (on OS X, at least) */
-	padding: 0 0 1px;
 	list-style-image: url(chrome://zotero/skin/zotero_status_bar.png);
 }
-#zotero-status-bar-icon[compact="true"]
+#zotero-status-bar-icon
+{
+	margin: 0 0 -1px; /* For Fitts's law (on OS X, at least) */
+	padding: 0 0 1px;
+}
+#zotero-addon-bar-icon
+{
+	margin-left: 10px;
+	margin-right: 10px;
+	padding-bottom: 4px;
+}
+#zotero-status-bar-icon[compact="true"], #zotero-addon-bar-icon[compact="true"]
 {
 	width: 20px;
-	margin: 0 0 -1px;
-	padding: 0 0 1px;
 	list-style-image: url(chrome://zotero/skin/zotero_status_bar_compact.png);
 }
-#zotero-status-bar-icon[error="true"]
+#zotero-status-bar-icon[error="true"], #zotero-addon-bar-icon[error="true"]
 {
 	list-style-image: url(chrome://zotero/skin/zotero_status_bar_error.png);
 }
